--- a/bridge.html
+++ b/bridge.html
@@ -26,9 +26,11 @@
       </h5>
       <hr />
       <hr />
-      <h5><a href="https://zhaodifont.github.io/kajicam/dist/beta/index.html">open betaUrl</a></h5>
-      <h5><a href="b612cnb://inappBrowser?url=https://sunnyeternal.github.io/Zepeto_jsBridge/dist/beta/index.html#/index">open betaUrl in betaApp</a></h5>
-      <h5><a href="b612cn://inappBrowser?url=https://sunnyeternal.github.io/Zepeto_jsBridge/dist/release/index.html#/index">open realUrl in realApp</a></h5>
+      <h5><a href="https://sunnyeternal.github.io/Zepeto_jsBridge/dist/beta/index.html#/index">open betaUrl</a></h5>
+      <!-- ZEPETO://HOME/WEBVIEW?url= -->
+      <h5><a href="ZEPETO://HOME/WEBVIEW?url=https://sunnyeternal.github.io/Zepeto_jsBridge/dist/beta/index.html#/index">open betaUrl in betaApp</a></h5>
+      <h5><a href="ZEPETO://HOME/WEBVIEW?url=https://sunnyeternal.github.io/Zepeto_jsBridge/dist/release/index.html#/index">open realUrl in realApp</a></h5>
+      <h5><a href="b612cnb://inappBrowser?url=https://zhaodifont.github.io/kajicam/dist/beta/index.html%3Fuuid%3D%7Bad_did%7D">B612</a></h5>
       <!-- <h5><a href="b612cn://inappBrowser?url=https://zhaodifont.github.io/kajicam/devshow/index.html">(单独的jsbridge)open realUrl in realApp</a></h5> -->
 
     </div>
