--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>锦鲤崽来袭，逢考必过!</title>
+    <title>Zepeto jsBridge Demo!</title>
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,6 +12,47 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://h5.kajicam.com/favicon.ico" type="image/x-icon">
     <script src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
+    <style>
+    *{
+      margin:0;padding:0;font-size: .28rem;
+      font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+    }
+    .commonBtn{
+      border: none;
+      position:fixed;
+      width: 1.4rem;
+      height: .6rem;
+      background-color: orange;
+      color: #fff;
+      line-height: .6rem;
+      text-align: center;
+      font-size: .32rem;
+      z-index:6667;
+    }
+    body,html {
+      height:100%;
+    }
+    #app{
+      width:100%;max-width:750px;height:100%;background-size:100% auto;padding:.8rem .2rem;box-sizing:border-box;color: #333;font-size:.32rem;
+    }
+    p{
+      line-height: .56rem;
+    }
+    .common{
+      border: none;
+      width: 3.6rem;
+      height: .6rem;
+      border-radius: .36rem;
+      background-color: orange;
+      color: #fff;
+      line-height: .6rem;
+      text-align: center;
+      font-size: .32rem;
+      z-index:6667;
+      margin-bottom: .1rem;
+    }
+   
+    </style>
   </head>
   <script>
     var _hmt = _hmt || [];
@@ -24,22 +65,34 @@
 
     var vConsole = new VConsole();
   </script>
+
 <body style="background-color: #f8e7c9;">
+  <script type="text/javascript">
+    !function(e,t){var n=e.documentElement,i="orientationchange"in window?"orientationchange":"resize",d=(/iPad|iPhone|iPod/.test(navigator.userAgent)&&!window.MSStream,function(){var t=n.clientWidth;t&&(t>=750?(t=750,e.body.style.width="750px"):e.body.style.width=t+"px",n.style.fontSize=100*(t/750)+"px",n.dataset.width=t,n.dataset.percent=100*(t/750))});d(),e.documentElement.classList.add("iosx"+t.devicePixelRatio),e.addEventListener&&t.addEventListener(i,d,!1)}(document,window)
+  </script>
 
-<script type="text/javascript">
-  !function(e,t){var n=e.documentElement,i="orientationchange"in window?"orientationchange":"resize",d=(/iPad|iPhone|iPod/.test(navigator.userAgent)&&!window.MSStream,function(){var t=n.clientWidth;t&&(t>=750?(t=750,e.body.style.width="750px"):e.body.style.width=t+"px",n.style.fontSize=100*(t/750)+"px",n.dataset.width=t,n.dataset.percent=100*(t/750))});d(),e.documentElement.classList.add("iosx"+t.devicePixelRatio),e.addEventListener&&t.addEventListener(i,d,!1)}(document,window)
-</script>
-<!-- test demo start -->
-  <button type="button" name="button" class="refresh" onclick="window.location.reload()" style="display:block;z-index:6667;font-size:.32rem;position:fixed;top:0;right:0;padding:.2rem;">reload</button>
-  <a href="ZEPETO://WEBVIEW/CLOSE" style="position:fixed;top:0;z-index:222;font-size:.54rem;color:#fff;"><span>关闭</span></a>
-  <div class="log" style="position:fixed;left:0;bottom:0;display:block;color:#000;font-size: 10px;z-index:999999;word-break:break-all"></div>
-<!-- test demo end -->
+
+  <button type="button" class="commonBtn" onclick="window.location.reload()" style="top:0; right:0;">Reload</button>
+  <a href="ZEPETO://WEBVIEW/CLOSE" style="position:fixed;top:0;z-index:222;font-size:.54rem;color:#fff;"><span class="commonBtn">关闭</span></a>
+
   <div id="app">
-  </div>
-  <input type="file" id="inputFile" accept="image/*" style="position:absolute;top:0;left:-9999px;" value="">
-  <img src="./static/img/blank.jpg" id="bridgeImg" style="position:absolute;top:0;left:-9999px;width:100%;z-index:166;background-color:red" alt="">
-</body>
-<script>
+    <h4>Base State:</h4>
+    <div class="baseState">
+      ...
+    </div>
+    <h4>ZepetoId:</h4>
+    <div class="zepetoId">
+      ...
+    </div>
+    
+    <br>
+    <br>
+    <button type="button" id="combineTwo" class="common">生成两个人物形象</button><br>
+    <div class="combineImgTwo"></div><br>
 
-</script>
+    <button type="button" id="combine" class="common">生成单个人物形象</button><br>
+    <div class="combineImg"></div><br>
+  </div>
+  
+</body>
 </html>
