--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       s.parentNode.insertBefore(hm, s);
     })();
 
-    var vConsole = new VConsole();
+    // var vConsole = new VConsole();
   </script>
 
 <body style="background-color: #f8e7c9;">
