--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
     }
     .cricle{
       width:4.5rem;height:4.5rem;padding-top: 1.6rem; box-sizing: border-box; text-align: center;border-radius: .3rem;overflow: hidden;
-      position: absolute;
+      position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
